--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -151,6 +151,7 @@
                     android:text="@string/new_insight" />
 
                 <ImageView
+                    android:id="@+id/iv_preview"
                     android:layout_width="match_parent"
                     android:layout_height="180dp"
                     android:layout_marginHorizontal="@dimen/space_normal"
@@ -159,6 +160,7 @@
                     app:cornerRadius="@dimen/space_normal" />
 
                 <TextView
+                    android:id="@+id/tv_preview"
                     style="@style/TextContent.Highlight"
                     android:layout_width="match_parent"
                     android:layout_marginHorizontal="@dimen/space_normal"
@@ -169,6 +171,7 @@
                     android:textSize="18sp" />
 
                 <TextView
+                    android:id="@+id/tv_content_preview"
                     style="@style/TextContent"
                     android:layout_width="match_parent"
                     android:layout_marginHorizontal="@dimen/space_normal"
