--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -42,13 +42,25 @@
             app:layout_constraintRight_toRightOf="parent" />
 
         <TextView
+            android:id="@+id/tv_username"
+            style="@style/TextContent"
+            android:text="@geohasboy"
+            android:gravity="center"
+            android:layout_marginTop="@dimen/space_normal"
+            android:textSize="12sp"
+            android:textColor="@color/orange_500"
+            app:layout_constraintTop_toBottomOf="@id/avatar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+
+        <TextView
             android:id="@+id/tv_fullname"
             style="@style/TextContent.Highlight"
             android:text="Geohasby Ammar Kautsar"
             android:gravity="center"
-            android:layout_marginTop="@dimen/space_normal"
             app:fontFamily="@font/poppins_bold"
-            app:layout_constraintTop_toBottomOf="@id/avatar"
+            app:layout_constraintTop_toBottomOf="@id/tv_username"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -60,7 +72,6 @@
             android:textSize="12sp"
             android:textColor="@color/grey_500"
             android:layout_marginHorizontal="@dimen/space_large"
-            android:layout_marginTop="@dimen/space_small"
             app:layout_constraintTop_toBottomOf="@id/tv_fullname"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -103,7 +114,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/space_large"
-            android:layout_marginTop="@dimen/space_extra_smallsmall"
+            android:layout_marginTop="@dimen/space_extra_small"
             android:src="@drawable/ic_unknown_flag"
             app:layout_constraintTop_toBottomOf="@id/tv_native"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -120,7 +131,7 @@
         <TextView
             android:id="@+id/tv_learn"
             style="@style/TextContent.Highlight"
-            android:text="@string/learn"
+            android:text="@string/txt_learn"
             android:textSize="12sp"
             android:layout_marginTop="@dimen/space_small"
             android:layout_marginHorizontal="@dimen/space_large"
