--- a/app/src/main/res/layout/bubble_item.xml
+++ b/app/src/main/res/layout/bubble_item.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:clickable="true"
     android:focusable="true"
-    android:layout_marginHorizontal="@dimen/space_extra_small"
+    android:paddingHorizontal="@dimen/space_small"
     android:paddingTop="@dimen/space_small"
     android:background="?attr/selectableItemBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
